2011-04-18  Hans Wennborg  <hans@chromium.org>

        Reviewed by Steve Block.

        LevelDB backend for IndexedDB
        https://bugs.webkit.org/show_bug.cgi?id=57372

        Only available behind a run-time flag. Covered by existing layout
        tests.

        * Android.mk:
        * CMakeLists.txt:
        * GNUmakefile.am:
        * GNUmakefile.list.am:
        * WebCore.gyp/WebCore.gyp:
        * WebCore.gypi:
        * WebCore.pri:
        * WebCore.pro:
        * WebCore.xcodeproj/project.pbxproj:
        * platform/leveldb/LevelDBComparator.h: Added.
        (WebCore::LevelDBComparator::~LevelDBComparator):
        * platform/leveldb/LevelDBDatabase.cpp: Added.
        (WebCore::makeSlice):
        (WebCore::makeLevelDBSlice):
        (WebCore::makeVector):
        (WebCore::LevelDBDatabase::LevelDBDatabase):
        (WebCore::LevelDBDatabase::~LevelDBDatabase):
        (WebCore::LevelDBDatabase::open):
        (WebCore::LevelDBDatabase::put):
        (WebCore::LevelDBDatabase::remove):
        (WebCore::LevelDBDatabase::get):
        (WebCore::LevelDBDatabase::newIterator):
        * platform/leveldb/LevelDBDatabase.h: Added.
        * platform/leveldb/LevelDBIterator.cpp: Added.
        (WebCore::LevelDBIterator::~LevelDBIterator):
        (WebCore::LevelDBIterator::LevelDBIterator):
        (WebCore::makeSlice):
        (WebCore::makeLevelDBSlice):
        (WebCore::LevelDBIterator::isValid):
        (WebCore::LevelDBIterator::seekToLast):
        (WebCore::LevelDBIterator::seek):
        (WebCore::LevelDBIterator::next):
        (WebCore::LevelDBIterator::prev):
        (WebCore::LevelDBIterator::key):
        (WebCore::LevelDBIterator::value):
        * platform/leveldb/LevelDBIterator.h: Added.
        * platform/leveldb/LevelDBSlice.h: Added.
        (WebCore::LevelDBSlice::LevelDBSlice):
        (WebCore::LevelDBSlice::~LevelDBSlice):
        (WebCore::LevelDBSlice::begin):
        (WebCore::LevelDBSlice::end):