@@ -1,3 +1,13 @@
+2011-04-18  Alexander Pavlov  <apavlov@chromium.org>
+
+        Reviewed by Yury Semikhatsky.
+
+        Web Inspector: Backspace in the Console is broken
+        https://bugs.webkit.org/show_bug.cgi?id=58764
+
+        * inspector/front-end/inspector.js:
+        (WebInspector.documentKeyDown):
+
 2011-04-18  Hans Wennborg  <hans@chromium.org>
 
         Reviewed by Steve Block.
